[package]
name = "n-dimensional-minesweeper"
version = "0.1.0"
edition = "2024"
authors = ["Jules <jules@example.com>"]
description = "A silly N-dimensional Minesweeper game in Rust, with a focus on educational, well-commented code."
repository = "https://github.com/example/n-dimensional-minesweeper" # Example repository

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
